--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.11.1
 certifi==2026.1.4
 cloudinary==1.44.1
+dj-database-url==3.1.1
 Django==6.0.2
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
