--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2026.1.4
 cloudinary==1.44.1
 dj-database-url==3.1.1
 Django==6.0.2
+django-cors-headers==4.9.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 gunicorn==25.1.0
